--- a/index.html
+++ b/index.html
@@ -1,19 +1,50 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Inicio</title>
-  <link rel="stylesheet" href="/css/styles.css">
+  <link rel="stylesheet" href="css/inicio.css" />
 </head>
-<body>
-  <section class="header">
-    <h1>Bienvenido a Piedi</h1>
-    <p>Gestiona fácilmente tu inventario y registros</p>
-  </section>
 
-  <nav class="card">
-    <a href="/html/registro.html" class="btn">Registrar Zapato</a>
-    <a href="/html/productos.html" class="btn">Ver Productos</a>
-   
-  </nav>
+<body>
+  
+  <!-- Header con navegación -->
+  <header>
+    <nav class="card-h">
+      <a href="/html/registro.html" class="btn">Registrar Zapato</a>
+      <a href="/html/productos.html" class="btn">Ver Productos</a>
+    </nav>
+  </header>
+
+  <!-- Contenido principal -->
+  <main class="main-content">
+    <section>
+      <h1>Bienvenido a Piedi</h1>
+      <p>Gestiona fácilmente tu inventario y registros</p>
+    </section>
+  </main>
+
+  <div class="card">
+
+    <div class="face front">
+        <img src="./images/logo.png" alt="Logo">
+        <h3></h3>
+    </div>
+    <div class="face back">
+        <h3>PIEDI</h3>
+        <p>La mejor comodidad al andar, correr o saltar, para un paso seguro confia en Piedi.</p>
+             <div class="link">
+                <a href="#">Detalles</a>
+             </div>
+    </div>
+
+
+</div>
+
+  <!-- Footer -->
+  <footer class="footer">
+    <h1>PIEDI</h1>
+  </footer>
+
 </body>
+</html>
