--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <!-- Header con navegación -->
   <header>
     <nav class="card-h">
-      <a href="/html/registro.html" class="btn">Registrar Zapato</a>
-      <a href="/html/productos.html" class="btn">Ver Productos</a>
+      <a href="html/registro.html" class="btn">Registrar Zapato</a>
+      <a href="html/productos.html" class="btn">Ver Productos</a>
     </nav>
   </header>
 
