--- a/html/registro.html
+++ b/html/registro.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Registro de Zapatos</title>
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <section class="container">
@@ -55,11 +55,11 @@
         <button class="btn" onclick="registrarZapato(event)">Registrar</button>
         <button class="btn" onclick="limpiarCampos()">Limpiar</button>
 
-        <button class="btn"><a href="/index.html">Index</a></button>
+        <button class="btn"><a href="./index.html">Index</a></button>
         <h3 id="resultado"></h3>
       </form>
     </section>
 
-    <script src="/js/script.js"></script>
+    <script src="./js/script.js"></script>
   </body>
 </html>
