--- a/html/productos.html
+++ b/html/productos.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ver Registros de Zapatos</title>
   
-  <link rel="stylesheet" href="css/view.css">
+  <link rel="stylesheet" href="../css/view.css">
 </head>
 <body>
   
@@ -20,6 +20,6 @@
     <a href="/index.html" class="btn">Volver al Registro</a>
   </section>
 
-  <script src="js/script.js"></script>
+  <script src="../js/script.js"></script>
 </body>
 </html>
