--- a/html/registro.html
+++ b/html/registro.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Registro de Zapatos</title>
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="../css/styles.css" />
   </head>
   <body>
     <section class="container">
@@ -60,6 +60,6 @@
       </form>
     </section>
 
-    <script src="js/script.js"></script>
+    <script src="../js/script.js"></script>
   </body>
 </html>
