--- a/html/productos.html
+++ b/html/productos.html
@@ -17,7 +17,7 @@
       
     </nav>
 
-    <a href="/index.html" class="btn">Volver al Registro</a>
+    <a href="./index.html" class="btn">Volver al Registro</a>
   </section>
 
   <script src="../js/script.js"></script>
