--- a/html/registro.html
+++ b/html/registro.html
@@ -55,7 +55,7 @@
         <button class="btn" onclick="registrarZapato(event)">Registrar</button>
         <button class="btn" onclick="limpiarCampos()">Limpiar</button>
 
-        <button class="btn"><a href="index.html">Index</a></button>
+        <button class="btn"><a href="../index.html">Index</a></button>
         <h3 id="resultado"></h3>
       </form>
     </section>
