--- a/html/productos.html
+++ b/html/productos.html
@@ -9,16 +9,19 @@
 </head>
 <body>
   
-  <section class="card">
-    <h1>Zapatos Registrados</h1>
+  <main class="card">
+    <header>
+      <h1>Zapatos Registrados</h1>
+    </header>
 
-    
-    <nav id="cardZap" class="cards-container">
-      
+    <section id="cardZap" class="cards-container">
+      <!-- Aquí se mostrarán los zapatos registrados -->
+    </section>
+
+    <nav>
+      <a href="../index.html" class="btn">Volver al Registro</a>
     </nav>
-
-    <a href="../index.html" class="btn">Volver al Registro</a>
-  </section>
+  </main>
 
   <script src="../js/script.js"></script>
 </body>
