--- a/index.html
+++ b/index.html
@@ -1,50 +1,43 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-  <meta charset="UTF-8" />
-  <title>Inicio</title>
-  <link rel="stylesheet" href="css/inicio.css" />
-</head>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Inicio</title>
+    <link rel="stylesheet" href="css/inicio.css" />
+  </head>
 
-<body>
-  
-  <!-- Header con navegación -->
-  <header>
-    <nav class="card-h">
-      <a href="html/registro.html" class="btn">Registrar Zapato</a>
-      <a href="html/productos.html" class="btn">Ver Productos</a>
-    </nav>
-  </header>
+  <body>
+    <!-- Encabezado con navegación -->
+    <header>
+      <nav class="card-h">
+        <a href="html/registro.html" class="btn">Registrar Zapato</a>
+        <a href="html/productos.html" class="btn">Ver Productos</a>
+      </nav>
+    </header>
 
-  <!-- Contenido principal -->
-  <main class="main-content">
-    <section>
-      <h1>Bienvenido a Piedi</h1>
-      <p>Gestiona fácilmente tu inventario y registros</p>
-    </section>
-  </main>
+    <!-- Contenido principal -->
+    <main class="main-content">
+      <section>
+        <h1>Bienvenido a Piedi</h1>
+        <p>Gestiona fácilmente tu inventario y registros</p>
+      </section>
 
-  <div class="card">
+      <article class="card">
+        <figure class="face front">
+          <img src="./images/logo.png" alt="Logo de Piedi" />
+        </figure>
+        <div class="face back">
+          <h2>PIEDI</h2>
+          <p>
+            La mejor comodidad al andar, correr o saltar. Para un paso seguro, confía en Piedi.
+          </p>
+        </div>
+      </article>
+    </main>
 
-    <div class="face front">
-        <img src="./images/logo.png" alt="Logo">
-        <h3></h3>
-    </div>
-    <div class="face back">
-        <h3>PIEDI</h3>
-        <p>La mejor comodidad al andar, correr o saltar, para un paso seguro confia en Piedi.</p>
-             <div class="link">
-                <a href="#">Detalles</a>
-             </div>
-    </div>
-
-
-</div>
-
-  <!-- Footer -->
-  <footer class="footer">
-    <h1>PIEDI</h1>
-  </footer>
-
-</body>
+    <!-- Pie de página -->
+    <footer class="footer">
+      <h2>PIEDI</h2>
+    </footer>
+  </body>
 </html>
