--- a/html/productos.html
+++ b/html/productos.html
@@ -1,28 +1,39 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ver Registros de Zapatos</title>
-  
-  <link rel="stylesheet" href="../css/view.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Zapatos Registrados</title>
+  <link rel="stylesheet" href="../css/view.css" />
 </head>
 <body>
-  
+
   <main class="card">
+    <header class="hero">
+      <div class="hero-content">
+        <h1>Zapatos <span class="logo-text">Registrados</span></h1>
+        <p>Descubre nuestra colección exclusiva y encuentra tu par ideal.</p>
+      </div>
+    </header>
+
+    
+  <section id="cardZap" class="cards-container">
     <header>
       <h1>Zapatos Registrados</h1>
     </header>
 
-    <section id="cardZap" class="cards-container">
-      <!-- Aquí se mostrarán los zapatos registrados -->
-    </section>
+  
 
-    <nav>
+  </section>
+
+    <nav class="nav-buttons" style="justify-content:center; margin-top: 40px;">
       <a href="../index.html" class="btn">Volver al Registro</a>
     </nav>
   </main>
-
   <script src="../js/script.js"></script>
+  <footer class="footer">
+    &copy; 2025 Tu Tienda de Zapatos | Contáctanos: info@tutiendazapatos.com
+  </footer>
+
 </body>
 </html>
