--- a/index.html
+++ b/index.html
@@ -2,42 +2,45 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <title>Inicio</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Inicio | Piedi</title>
     <link rel="stylesheet" href="css/inicio.css" />
   </head>
 
   <body>
-    <!-- Encabezado con navegación -->
-    <header>
-      <nav class="card-h">
-        <a href="html/registro.html" class="btn">Registrar Zapato</a>
-        <a href="html/productos.html" class="btn">Ver Productos</a>
-      </nav>
+    <header class="hero">
+      <div class="hero-content">
+        <h1>Bienvenido a <span class="logo-text">Piedi</span></h1>
+        <p>Donde cada paso cuenta. Explora la comodidad con estilo.</p>
+
+        <nav class="nav-btn">
+          <a href="html/registro.html" class="btn">Registrar Zapato</a>
+          <a href="html/productos.html" class="btn">Ver Productos</a>
+        </nav>
+      </div>
     </header>
 
-    <!-- Contenido principal -->
     <main class="main-content">
-      <section>
-        <h1>Bienvenido a Piedi</h1>
-        <p>Gestiona fácilmente tu inventario y registros</p>
-      </section>
-
-      <article class="card">
-        <figure class="face front">
-          <img src="./images/logo.png" alt="Logo de Piedi" />
-        </figure>
-        <div class="face back">
-          <h2>PIEDI</h2>
+          <h2>Sobre nosotros</h2>
           <p>
-            La mejor comodidad al andar, correr o saltar. Para un paso seguro, confía en Piedi.
+            En <strong>Piedi</strong>, creemos que tus pies merecen lo mejor.
+            Nuestra tienda ofrece una selección cuidadosamente curada de calzado
+            para todas las edades y estilos.
           </p>
-        </div>
-      </article>
+          <p>
+            Gestiona tu inventario de manera rápida, sencilla y visualmente
+            atractiva.
+          </p>
+        </article>
+
+        <figure class="about-image">
+          <img src="/img/logo.png" alt="Logo de Piedi" />
+        </figure>
+      </section>
     </main>
 
-    <!-- Pie de página -->
     <footer class="footer">
-      <h2>PIEDI</h2>
+      <p>&copy; 2025 <strong>PIEDI</strong> | Todos los derechos reservados</p>
     </footer>
   </body>
 </html>
