--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Inicio | Piedi</title>
-    <link rel="stylesheet" href="css/inicio.css" />
+    <link rel="stylesheet" href="../css/inicio.css" />
   </head>
 
   <body>
@@ -34,7 +34,7 @@
         </article>
 
         <figure class="about-image">
-          <img src="/img/logo.png" alt="Logo de Piedi" />
+          <img src="../img/logo.png" alt="Logo de Piedi" />
         </figure>
       </section>
     </main>
