--- a/index.html
+++ b/index.html
@@ -1,46 +1,54 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Inicio | Piedi</title>
-    <link rel="stylesheet" href="../css/inicio.css" />
-  </head>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Inicio | Piedi</title>
+  <link rel="stylesheet" href="css/inicio.css" />
+</head>
 
-  <body>
-    <header class="hero">
-      <div class="hero-content">
-        <h1>Bienvenido a <span class="logo-text">Piedi</span></h1>
-        <p>Donde cada paso cuenta. Explora la comodidad con estilo.</p>
+<body>
+  <!-- Encabezado principal -->
+  <header class="hero">
+    <div class="hero-content">
+      <h1>Bienvenido a <span class="logo-text">Piedi</span></h1>
+      <p>Donde cada paso cuenta. Explora la comodidad con estilo.</p>
 
-        <nav class="nav-btn">
+      <!-- Navegación principal -->
+      <nav class="nav-btn" aria-label="Navegación principal">
+        
           <a href="html/registro.html" class="btn">Registrar Zapato</a>
           <a href="html/productos.html" class="btn">Ver Productos</a>
-        </nav>
-      </div>
-    </header>
+        
+      </nav>
+    </div>
+  </header>
 
-    <main class="main-content">
-          <h2>Sobre nosotros</h2>
-          <p>
-            En <strong>Piedi</strong>, creemos que tus pies merecen lo mejor.
-            Nuestra tienda ofrece una selección cuidadosamente curada de calzado
-            para todas las edades y estilos.
-          </p>
-          <p>
-            Gestiona tu inventario de manera rápida, sencilla y visualmente
-            atractiva.
-          </p>
-        </article>
+  <!-- Contenido principal -->
+  <main class="main-content">
+    <section class="about">
+      <article class="about-text">
+        <h2>Sobre nosotros</h2>
+        <p>
+          En <strong>Piedi</strong>, creemos que tus pies merecen lo mejor. Nuestra tienda ofrece una
+          selección cuidadosamente curada de calzado para todas las edades y estilos.
+        </p>
+        <p>
+          Gestiona tu inventario de manera rápida, sencilla y visualmente atractiva.
+        </p>
+      </article>
 
-        <figure class="about-image">
-          <img src="../img/logo.png" alt="Logo de Piedi" />
-        </figure>
-      </section>
-    </main>
+      <!-- Imagen decorativa con figura -->
+      <figure class="about-image">
+        <img src="/img/logo.png" alt="Logo de Piedi" />
+        <figcaption>Logo de nuestra tienda Piedi</figcaption>
+      </figure>
+    </section>
+  </main>
 
-    <footer class="footer">
-      <p>&copy; 2025 <strong>PIEDI</strong> | Todos los derechos reservados</p>
-    </footer>
-  </body>
+  <!-- Pie de página -->
+  <footer class="footer">
+    <p>&copy; 2025 <strong>PIEDI</strong> | Todos los derechos reservados</p>
+  </footer>
+</body>
 </html>
