--- a/index.html
+++ b/index.html
@@ -41,12 +41,11 @@
       <!-- Imagen decorativa con figura -->
       <figure class="about-image">
         <img src="/img/logo.png" alt="Logo de Piedi" />
-        <figcaption>Logo de nuestra tienda Piedi</figcaption>
       </figure>
     </section>
   </main>
 
-  <!-- Pie de página -->
+   <script src="/js/productos.js"></script>
   <footer class="footer">
     <p>&copy; 2025 <strong>PIEDI</strong> | Todos los derechos reservados</p>
   </footer>
