--- a/html/registro.html
+++ b/html/registro.html
@@ -3,9 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <title>Registro de Zapatos</title>
-    <link rel="stylesheet" href="../css/styles.css" />
+    <link rel="stylesheet" href="../css/registro.css" />
   </head>
   <body>
+    <header class="hero">
+      <div class="hero-content">
+        <h1>Bienvenido a <span class="logo-text">Piedi</span></h1>
+        <p>Donde cada paso cuenta. Explora la comodidad con estilo.</p>
+      </div>
+      <nav>
+        <a href="/index.html" class="btn">INICIO</a>
+      </nav>
+    </header>
     <section class="container">
       <section class="desc">
         <h1>
@@ -51,7 +60,7 @@
 
         <label>Talla:</label>
         <select id="talla">
-          <option value="" >Selecciona una categoría</option>
+          <option value="">Selecciona una categoría</option>
           <option value="1">35</option>
           <option value="2">36</option>
           <option value="3">37</option>
