--- a/index.html
+++ b/index.html
@@ -1,53 +1,56 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Inicio | Piedi</title>
-  <link rel="stylesheet" href="css/inicio.css" />
-</head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Inicio | Piedi</title>
+    <link rel="stylesheet" href="css/inicio.css" />
+  </head>
 
-<body>
-  <!-- Encabezado principal -->
-  <header class="hero">
-    <div class="hero-content">
-      <h1>Bienvenido a <span class="logo-text">Piedi</span></h1>
-      <p>Donde cada paso cuenta. Explora la comodidad con estilo.</p>
+  <body>
+    <div class="wrapper">
+      <!-- Encabezado principal -->
+      <header class="hero">
+        <div class="hero-content">
+          <h1>Bienvenido a <span class="logo-text">Piedi</span></h1>
+          <p>Donde cada paso cuenta. Explora la comodidad con estilo.</p>
 
-      <!-- Navegación principal -->
-      <nav class="nav-btn" aria-label="Navegación principal">
-        
-          <a href="html/registro.html" class="btn">Registrar Zapato</a>
-          <a href="html/productos.html" class="btn">Ver Productos</a>
-        
-      </nav>
+          <!-- Navegación principal -->
+          <nav class="nav-btn" aria-label="Navegación principal">
+            <a href="html/registro.html" class="btn">Registrar Zapato</a>
+            <a href="html/productos.html" class="btn">Ver Productos</a>
+          </nav>
+        </div>
+      </header>
+
+      <!-- Contenido principal -->
+      <main class="main-content">
+        <section class="about">
+          <article class="about-text">
+            <h2>Sobre nosotros</h2>
+            <p>
+              En <strong>Piedi</strong>, creemos que tus pies merecen lo mejor.
+              Nuestra tienda ofrece una selección cuidadosamente curada de calzado
+              para todas las edades y estilos.
+            </p>
+            <p>
+              Gestiona tu inventario de manera rápida, sencilla y visualmente
+              atractiva.
+            </p>
+          </article>
+
+          <figure class="about-image">
+            <img src="/img/logo.png" alt="Logo de Piedi" />
+          </figure>
+        </section>
+      </main>
+
+      <!-- Pie de página -->
+      <footer class="footer">
+        <p>&copy; 2025 <strong>PIEDI</strong> | Todos los derechos reservados</p>
+      </footer>
     </div>
-  </header>
 
-  <!-- Contenido principal -->
-  <main class="main-content">
-    <section class="about">
-      <article class="about-text">
-        <h2>Sobre nosotros</h2>
-        <p>
-          En <strong>Piedi</strong>, creemos que tus pies merecen lo mejor. Nuestra tienda ofrece una
-          selección cuidadosamente curada de calzado para todas las edades y estilos.
-        </p>
-        <p>
-          Gestiona tu inventario de manera rápida, sencilla y visualmente atractiva.
-        </p>
-      </article>
-
-      <!-- Imagen decorativa con figura -->
-      <figure class="about-image">
-        <img src="/img/logo.png" alt="Logo de Piedi" />
-      </figure>
-    </section>
-  </main>
-
-   <script src="/js/productos.js"></script>
-  <footer class="footer">
-    <p>&copy; 2025 <strong>PIEDI</strong> | Todos los derechos reservados</p>
-  </footer>
-</body>
+    <script src="/js/productos.js"></script>
+  </body>
 </html>
