--- a/html/productos.html
+++ b/html/productos.html
@@ -13,9 +13,8 @@
         <p>Donde cada paso cuenta. Explora la comodidad con estilo.</p>
 
         <!-- Navegación principal -->
-        <nav class="nav-btn" aria-label="Navegación principal">
-          <a href="html/registro.html" class="btn">Registrar Zapato</a>
-          <a href="html/productos.html" class="btn">Ver Productos</a>
+        <nav>
+          <a href="/index.html" class="btn">INICIO</a>
         </nav>
       </div>
     </header>
@@ -66,7 +65,7 @@
         <!-- Navegación paginas-->
         <nav class="paginacion">
           <button class="btn" id="prevPage">Anterior</button>
-          <span id="pageInfo" style="margin: 0 15px; font-weight: bold"></span>
+          <span class="pageIn" id="pageInfo"></span>
           <button class="btn" id="nextPage">Siguiente</button>
         </nav>
       </main>
@@ -78,5 +77,6 @@
     </div>
 
     <script src="../js/script.js"></script>
+    <!-- <script src="../js/filtro.js"></script> -->
   </body>
 </html>
