--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Inicio | Piedi</title>
     <link rel="stylesheet" href="css/inicio.css" />
+    <link rel="stylesheet" href="css/view.css" />
   </head>
 
   <body>
@@ -30,13 +31,83 @@
             <h2>Sobre nosotros</h2>
             <p>
               En <strong>Piedi</strong>, creemos que tus pies merecen lo mejor.
-              Nuestra tienda ofrece una selección cuidadosamente curada de calzado
-              para todas las edades y estilos.
+              Nuestra tienda ofrece una selección cuidadosamente curada de
+              calzado para todas las edades y estilos.
             </p>
             <p>
               Gestiona tu inventario de manera rápida, sencilla y visualmente
               atractiva.
             </p>
+          </article>
+          <article>
+            <h2>Registro de Productos en el Sistema</h2>
+            <p>
+              Para registrar un nuevo producto de calzado en el sistema, es
+              fundamental que el usuario ingrese todos los campos requeridos
+              correctamente para garantizar un registro válido y útil para la
+              gestión del inventario.
+            </p>
+            <h3>Nombre del Producto</h3>
+            <p>
+              El campo de nombre debe contener un texto con un máximo de 20
+              caracteres. Esto asegura que el nombre sea conciso, claro y fácil
+              de identificar dentro del sistema.
+            </p>
+            <h3>Categoría</h3>
+            <p>
+              La categoría del producto debe seleccionarse de un listado
+              predefinido que incluye al menos cinco opciones distintas. Esto
+              permite clasificar correctamente cada zapato, facilitando su
+              organización y búsqueda en la plataforma.
+            </p>
+            <h3>Imagen</h3>
+            <p>
+              La selección de la imagen se realiza mediante un selector
+              desplegable que muestra el nombre de las imágenes disponibles. El
+              sistema debe contar con un mínimo de diez opciones para asegurar
+              variedad y una representación visual adecuada de cada producto.
+            </p>
+            <h3>Precio</h3>
+            <p>
+              El campo de precio debe aceptar únicamente números y mostrarse
+              formateado en pesos. Esto facilita la comprensión del costo para
+              el usuario final y asegura una presentación clara y uniforme del
+              valor del producto.
+            </p>
+            <h3>Código del Producto</h3>
+            <p>
+              El código es un identificador único que debe tener al menos ocho
+              caracteres y contener al menos una letra minúscula. Esta condición
+              garantiza que el código no sea únicamente numérico, mejorando la
+              seguridad y evitando duplicidades en el inventario.
+            </p>
+            <h3>Importancia del Cumplimiento de los Requisitos</h3>
+            <p>
+              Cumplir con estas condiciones es esencial para mantener la calidad
+              y normalización del inventario. Un registro completo y validado
+              facilita la gestión interna y mejora la experiencia de los
+              usuarios, tanto administradores como clientes, al buscar,
+              consultar y visualizar los productos dentro de la tienda en línea.
+            </p>
+          </article>
+          <article>
+            <h2>Ejemplo de Producto Registrado</h2>
+            <p>
+              A continuación, se muestra un ejemplo de un zapato registrado
+              correctamente, cumpliendo con todos los requisitos establecidos
+              para el registro:
+            </p>
+            <div class="card-item">
+              <img src="/img/img1.jpg" class="card-img" />
+              <div class="card-info">
+                <h3>Chanel Caballero Indiv</h3>
+                <p><strong>Género:</strong>Hombre</p>
+                <p><strong>Categoría:</strong>Elegante</p>
+                <p><strong>Código:</strong>Chan1238</p>
+                <p><strong>Precio:</strong>$500000</p>
+                <p><strong>Talla:</strong>40</p>
+              </div>
+            </div>
           </article>
 
           <figure class="about-image">
@@ -47,7 +118,9 @@
 
       <!-- Pie de página -->
       <footer class="footer">
-        <p>&copy; 2025 <strong>PIEDI</strong> | Todos los derechos reservados</p>
+        <p>
+          &copy; 2025 <strong>PIEDI</strong> | Todos los derechos reservados
+        </p>
       </footer>
     </div>
 
