--- a/html/productos.html
+++ b/html/productos.html
@@ -45,7 +45,25 @@
       <button class="btn" onclick="aplicarFiltros()">Filtrar</button>
       <button class="btn" onclick="limpiarFiltros()">Limpiar</button>
     </section>
-    <div class="wrapper">
+    <section id="tablaFiltro" class="container-filtro" style="display: none">
+      <table>
+        <thead>
+          <tr>
+            <th>Nombre</th>
+            <th>Género</th>
+            <th>Categoría</th>
+            <th>Precio</th>
+            <th>Código</th>
+            <th>Talla</th>
+            <th>Imagen</th>
+          </tr>
+        </thead>
+        <tbody id="cuerpoTabla">
+          <!-- Aquí se insertarán los productos filtrados -->
+        </tbody>
+      </table>
+    </section>
+    <section class="wrapper">
       <main class="card">
         <!-- Encabezado visual -->
         <header class="hero">
@@ -59,7 +77,7 @@
 
         <!-- Contenedor de productos -->
         <section id="cardZap" class="cards-container">
-          <!-- Aquí se insertan dinámicamente los zapatos -->
+          <!-- Aquí se insertan los datos de mi array -->
         </section>
 
         <!-- Navegación paginas-->
@@ -74,7 +92,7 @@
       <footer class="footer">
         &copy; 2025 Tu Tienda de Zapatos | Contáctanos: info@tutiendazapatos.com
       </footer>
-    </div>
+    </section>
 
     <script src="../js/script.js"></script>
     <!-- <script src="../js/filtro.js"></script> -->
