--- a/html/registro.html
+++ b/html/registro.html
@@ -2,7 +2,7 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <title>Registro de Zapatos</title>
+    <title>Registro | Piedi</title>
     <link rel="stylesheet" href="../css/registro.css" />
   </head>
   <body>
