--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Inicio | Piedi</title>
+    <title>Indicaciones | Piedi</title>
     <link rel="stylesheet" href="css/inicio.css" />
     <link rel="stylesheet" href="css/view.css" />
   </head>
@@ -98,12 +98,25 @@
               para el registro:
             </p>
             <div class="card-item">
+              <h4>Ejemplo Valido</h4>
               <img src="/img/img1.jpg" class="card-img" />
               <div class="card-info">
-                <h3>Chanel Caballero Indiv</h3>
+                <h3>Chanel Caballero</h3>
                 <p><strong>Género:</strong>Hombre</p>
                 <p><strong>Categoría:</strong>Elegante</p>
                 <p><strong>Código:</strong>Chan1238</p>
+                <p><strong>Precio:</strong>$500000</p>
+                <p><strong>Talla:</strong>40</p>
+              </div>
+            </div>
+            <div class="card-item">
+              <h4>Ejemplo Invalido</h4>
+              <img src="/img/img3.jpg" class="card-img" />
+              <div class="card-info">
+                <h3>Chanel Damsisela Individual</h3>
+                <p><strong>Género:</strong>Hombre</p>
+                <p><strong>Categoría:</strong>Elegante</p>
+                <p><strong>Código:</strong>A123</p>
                 <p><strong>Precio:</strong>$500000</p>
                 <p><strong>Talla:</strong>40</p>
               </div>
