--- a/html/productos.html
+++ b/html/productos.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Zapatos Registrados</title>
+    <title>Productos | Piedi</title>
     <link rel="stylesheet" href="../css/view.css" />
   </head>
   <body>
