--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
               para el registro:
             </p>
             <div class="card-item">
-              <h4>Ejemplo Valido</h4>
+              <h4 style="color: rgb(2, 255, 23);">Ejemplo Valido</h4>
               <img src="/img/img1.jpg" class="card-img" />
               <div class="card-info">
                 <h3>Chanel Caballero</h3>
@@ -110,7 +110,7 @@
               </div>
             </div>
             <div class="card-item">
-              <h4>Ejemplo Invalido</h4>
+              <h4 style="color: red;">Ejemplo Invalido</h4>
               <img src="/img/img3.jpg" class="card-img" />
               <div class="card-info">
                 <h3>Chanel Damsisela Individual</h3>
